--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
             android:name=".HomeActivity"
             android:exported="true">
         </activity>
+        <activity
+            android:name=".RecipeActivity"
+            android:exported="true">
+        </activity>
     </application>
 
 </manifest>
