--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,11 +21,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".HomeActivity"
+            android:name=".HomeFragment"
             android:exported="true">
         </activity>
         <activity
-            android:name=".RecipeActivity"
+            android:name=".RecipeFragment"
             android:exported="true">
         </activity>
     </application>
